--- a/index.html
+++ b/index.html
@@ -38,12 +38,20 @@
 
         <ul class="auth-nav">
           <li class="item">
-            <a href="mailto:info@devstudio.com" class="link"
-              >info@devstudio.com</a
-            >
+            <a href="mailto:info@devstudio.com" class="link">
+              <svg class="icon" width="16" height="12">
+                <use href="./images/icons.svg#icon-envelope"></use>
+              </svg>
+              info@devstudio.com
+            </a>
           </li>
           <li class="item">
-            <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+            <a href="tel:+380961111111" class="link">
+              <svg class="icon" width="16" height="12">
+                <use href="./images/icons.svg#icon-smartphone"></use>
+              </svg>
+              +38 096 111 11 11
+            </a>
           </li>
         </ul>
       </div>
@@ -64,6 +72,13 @@
           <h2 class="section-title hidden">Наши преимущества</h2>
           <ul class="feature-list">
             <li class="item">
+              <div class="thumb">
+                <div>
+                  <svg class="icon" width="70" height="70">
+                    <use href="./images/icons.svg#icon-sattellite"></use>
+                  </svg>
+                </div>
+              </div>
               <h3 class="title">Внимание к деталям</h3>
               <p class="text">
                 Идейные соображения, а также начало повседневной работы по
@@ -71,6 +86,11 @@
               </p>
             </li>
             <li class="item">
+              <div class="thumb">
+                <svg class="icon" width="70" height="70">
+                  <use href="./images/icons.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="title">Пунктуальность</h3>
               <p class="text">
                 Задача организации, в особенности же рамки и место обучения
@@ -78,6 +98,13 @@
               </p>
             </li>
             <li class="item">
+              <div class="thumb">
+                <div>
+                  <svg class="icon" width="70" height="70">
+                    <use href="./images/icons.svg#icon-diagram"></use>
+                  </svg>
+                </div>
+              </div>
               <h3 class="title">Планирование</h3>
               <p class="text">
                 Равным образом консультация с широким активом в значительной
@@ -85,6 +112,13 @@
               </p>
             </li>
             <li class="item">
+              <div class="thumb">
+                <div>
+                  <svg class="icon" width="70" height="70">
+                    <use href="./images/icons.svg#icon-astronaut"></use>
+                  </svg>
+                </div>
+              </div>
               <h3 class="title">Современные технологии</h3>
               <p class="text">
                 Значимость этих проблем настолько очевидна, что реализация
@@ -142,6 +176,36 @@
               />
               <h3 class="name">Игорь Демьяненко</h3>
               <p class="position">Product Designer</p>
+              <ul class="staff-social">
+                <li class="item-icon">
+                  <a class="link" href="" aria-label="Instagram">
+                    <svg class="icon" width="20px" height="20px">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="item-icon">
+                  <a class="link" href="" aria-label="Twitter">
+                    <svg class="icon" width="20px" height="20px">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="item-icon">
+                  <a class="link" href="" aria-label="Facebook">
+                    <svg class="icon" width="20px" height="20px">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="item-icon">
+                  <a class="link" href="" aria-label="LinkedIn">
+                    <svg class="icon" width="20px" height="20px">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </li>
             <li class="item">
               <img
@@ -152,6 +216,36 @@
               />
               <h3 class="name">Ольга Репина</h3>
               <p class="position">Frontend Developer</p>
+              <ul class="staff-social">
+                <li class="item-icon">
+                  <a class="link" href="" aria-label="Instagram">
+                    <svg class="icon" width="20px" height="20px">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="item-icon">
+                  <a class="link" href="" aria-label="Twitter">
+                    <svg class="icon" width="20px" height="20px">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="item-icon">
+                  <a class="link" href="" aria-label="Facebook">
+                    <svg class="icon" width="20px" height="20px">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="item-icon">
+                  <a class="link" href="" aria-label="LinkedIn">
+                    <svg class="icon" width="20px" height="20px">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </li>
             <li class="item">
               <img
@@ -162,6 +256,36 @@
               />
               <h3 class="name">Николай Тарасов</h3>
               <p class="position">Marketing</p>
+              <ul class="staff-social">
+                <li class="item-icon">
+                  <a class="link" href="" aria-label="Instagram">
+                    <svg class="icon" width="20px" height="20px">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="item-icon">
+                  <a class="link" href="" aria-label="Twitter">
+                    <svg class="icon" width="20px" height="20px">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="item-icon">
+                  <a class="link" href="" aria-label="Facebook">
+                    <svg class="icon" width="20px" height="20px">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="item-icon">
+                  <a class="link" href="" aria-label="LinkedIn">
+                    <svg class="icon" width="20px" height="20px">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </li>
             <li class="item">
               <img
@@ -172,6 +296,36 @@
               />
               <h3 class="name">Михаил Ермаков</h3>
               <p class="position">UI Designer</p>
+              <ul class="staff-social">
+                <li class="item-icon">
+                  <a class="link" href="" aria-label="Instagram">
+                    <svg class="icon" width="20px" height="20px">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="item-icon">
+                  <a class="link" href="" aria-label="Twitter">
+                    <svg class="icon" width="20px" height="20px">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="item-icon">
+                  <a class="link" href="" aria-label="Facebook">
+                    <svg class="icon" width="20px" height="20px">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="item-icon">
+                  <a class="link" href="" aria-label="LinkedIn">
+                    <svg class="icon" width="20px" height="20px">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </li>
           </ul>
         </div>
@@ -200,6 +354,22 @@
             </li>
           </ul>
         </address>
+
+        <div class="footer-social">
+          <p class="text">Присоединяйтесь</p>
+          <ul class="links">
+            <li class="item">
+              <a href="">
+                <svg>
+                  <use href="./images/icons.svg#instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="item"></li>
+            <li class="item"></li>
+            <li class="item"></li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
