fixed icons in auth-nav

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <ul class="auth-nav">
           <li class="item">
             <a href="mailto:info@devstudio.com" class="link">
-              <svg class="icon" width="16" height="12">
+              <svg class="icon">
                 <use href="./images/icons.svg#icon-envelope"></use>
               </svg>
               info@devstudio.com
@@ -47,7 +47,7 @@
           </li>
           <li class="item">
             <a href="tel:+380961111111" class="link">
-              <svg class="icon" width="16" height="12">
+              <svg class="icon">
                 <use href="./images/icons.svg#icon-smartphone"></use>
               </svg>
               +38 096 111 11 11
@@ -355,21 +355,18 @@
           </ul>
         </address>
 
-        <div class="footer-social">
-          <p class="text">Присоединяйтесь</p>
-          <ul class="links">
-            <li class="item">
-              <a href="">
-                <svg>
-                  <use href="./images/icons.svg#instagram"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="item"></li>
-            <li class="item"></li>
-            <li class="item"></li>
-          </ul>
-        </div>
+        <ul class="links">
+          <li class="item">
+            <a href="">
+              <svg>
+                <use href="./images/icons.svg#instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="item"></li>
+          <li class="item"></li>
+          <li class="item"></li>
+        </ul>
       </div>
     </footer>
   </body>
