portfolio.html fixed

--- a/index.html
+++ b/index.html
@@ -73,11 +73,9 @@
           <ul class="feature-list">
             <li class="item">
               <div class="thumb">
-                <div>
-                  <svg class="icon" width="70" height="70">
-                    <use href="./images/icons.svg#icon-sattellite"></use>
-                  </svg>
-                </div>
+                <svg class="icon" width="70" height="70">
+                  <use href="./images/icons.svg#icon-sattellite"></use>
+                </svg>
               </div>
               <h3 class="title">Внимание к деталям</h3>
               <p class="text">
@@ -99,11 +97,9 @@
             </li>
             <li class="item">
               <div class="thumb">
-                <div>
-                  <svg class="icon" width="70" height="70">
-                    <use href="./images/icons.svg#icon-diagram"></use>
-                  </svg>
-                </div>
+                <svg class="icon" width="70" height="70">
+                  <use href="./images/icons.svg#icon-diagram"></use>
+                </svg>
               </div>
               <h3 class="title">Планирование</h3>
               <p class="text">
@@ -113,11 +109,9 @@
             </li>
             <li class="item">
               <div class="thumb">
-                <div>
-                  <svg class="icon" width="70" height="70">
-                    <use href="./images/icons.svg#icon-astronaut"></use>
-                  </svg>
-                </div>
+                <svg class="icon" width="70" height="70">
+                  <use href="./images/icons.svg#icon-astronaut"></use>
+                </svg>
               </div>
               <h3 class="title">Современные технологии</h3>
               <p class="text">
@@ -330,43 +324,117 @@
           </ul>
         </div>
       </section>
+
+      <!-- Clients -->
+      <section class="section clients">
+        <div class="container">
+          <h2 class="section-title">Постоянные клиенты</h2>
+          <ul class="clients-list">
+            <li class="client">
+              <a href="" class="link">
+                <svg class="icon">
+                  <use href="./images/icons.svg#icon-yaco"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="client">
+              <a href="" class="link">
+                <svg class="icon">
+                  <use href="./images/icons.svg#icon-company-tagline"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="client">
+              <a href="" class="link">
+                <svg class="icon">
+                  <use href="./images/icons.svg#icon-company"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="client">
+              <a href="" class="link">
+                <svg class="icon">
+                  <use href="./images/icons.svg#icon-foster-peters"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="client">
+              <a href="" class="link">
+                <svg class="icon">
+                  <use href="./images/icons.svg#icon-brand"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="client">
+              <a href="" class="link">
+                <svg class="icon">
+                  <use href="./images/icons.svg#icon-company-tag-line"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </section>
     </main>
 
     <!--Footer-->
     <footer class="footer">
       <div class="container">
-        <a class="logo" href="./">
-          <span class="logo-web">Web</span
-          ><span class="logo-studio">Studio</span></a
-        >
-        <address>
-          <ul class="footer-nav">
-            <li class="footer-address">г. Киев, пр-т Леси Украинки, 26</li>
-            <li>
-              <a href="mailto:info@devstudio.com" class="footer-auth"
-                >info@devstudio.com</a
-              >
+        <div class="auth-block">
+          <a class="logo" href="./">
+            <span class="logo-web">Web</span
+            ><span class="logo-studio">Studio</span></a
+          >
+          <address>
+            <ul class="footer-nav">
+              <li class="footer-address">г. Киев, пр-т Леси Украинки, 26</li>
+              <li>
+                <a href="mailto:info@devstudio.com" class="footer-auth"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li>
+                <a href="tel:+380961111111" class="footer-auth"
+                  >+38 096 111 11 11</a
+                >
+              </li>
+            </ul>
+          </address>
+        </div>
+
+        <section class="socials">
+          <h3 class="text">Присоединяйтесь</h3>
+          <ul class="socials-list">
+            <li class="item">
+              <a href="" class="link">
+                <svg class="icon">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
             </li>
-            <li>
-              <a href="tel:+380961111111" class="footer-auth"
-                >+38 096 111 11 11</a
-              >
+            <li class="item">
+              <a href="" class="link">
+                <svg class="icon">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="item">
+              <a href="" class="link">
+                <svg class="icon">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="item">
+              <a href="" class="link">
+                <svg class="icon">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
             </li>
           </ul>
-        </address>
-
-        <ul class="links">
-          <li class="item">
-            <a href="">
-              <svg>
-                <use href="./images/icons.svg#instagram"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="item"></li>
-          <li class="item"></li>
-          <li class="item"></li>
-        </ul>
+        </section>
       </div>
     </footer>
   </body>
