--- a/portfolio.html
+++ b/portfolio.html
@@ -38,12 +38,20 @@
 
         <ul class="auth-nav">
           <li class="item">
-            <a href="mailto:info@devstudio.com" class="link"
-              >info@devstudio.com</a
-            >
+            <a href="mailto:info@devstudio.com" class="link">
+              <svg class="icon">
+                <use href="./images/icons.svg#icon-envelope"></use>
+              </svg>
+              info@devstudio.com
+            </a>
           </li>
           <li class="item">
-            <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+            <a href="tel:+380961111111" class="link">
+              <svg class="icon">
+                <use href="./images/icons.svg#icon-smartphone"></use>
+              </svg>
+              +38 096 111 11 11
+            </a>
           </li>
         </ul>
       </div>
@@ -194,25 +202,61 @@
     <!--Footer-->
     <footer class="footer">
       <div class="container">
-        <a class="logo" href="./">
-          <span class="logo-web">Web</span
-          ><span class="logo-studio">Studio</span></a
-        >
-        <address>
-          <ul class="footer-nav">
-            <li class="footer-address">г. Киев, пр-т Леси Украинки, 26</li>
-            <li>
-              <a href="mailto:info@devstudio.com" class="footer-auth"
-                >info@devstudio.com</a
-              >
+        <div class="auth-block">
+          <a class="logo" href="./">
+            <span class="logo-web">Web</span
+            ><span class="logo-studio">Studio</span></a
+          >
+          <address>
+            <ul class="footer-nav">
+              <li class="footer-address">г. Киев, пр-т Леси Украинки, 26</li>
+              <li>
+                <a href="mailto:info@devstudio.com" class="footer-auth"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li>
+                <a href="tel:+380961111111" class="footer-auth"
+                  >+38 096 111 11 11</a
+                >
+              </li>
+            </ul>
+          </address>
+        </div>
+
+        <section class="socials">
+          <h3 class="text">Присоединяйтесь</h3>
+          <ul class="socials-list">
+            <li class="item">
+              <a href="" class="link">
+                <svg class="icon">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
             </li>
-            <li>
-              <a href="tel:+380961111111" class="footer-auth"
-                >+38 096 111 11 11</a
-              >
+            <li class="item">
+              <a href="" class="link">
+                <svg class="icon">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="item">
+              <a href="" class="link">
+                <svg class="icon">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="item">
+              <a href="" class="link">
+                <svg class="icon">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
             </li>
           </ul>
-        </address>
+        </section>
       </div>
     </footer>
   </body>
