--- a/index.html
+++ b/index.html
@@ -330,44 +330,44 @@
         <div class="container">
           <h2 class="section-title">Постоянные клиенты</h2>
           <ul class="clients-list">
-            <li class="client">
+            <li class="item">
               <a href="" class="link">
-                <svg class="icon">
+                <svg class="icon" width="41" height="46.7">
                   <use href="./images/icons.svg#icon-yaco"></use>
                 </svg>
               </a>
             </li>
-            <li class="client">
+            <li class="item">
               <a href="" class="link">
-                <svg class="icon">
+                <svg class="icon" width="40" height="52">
                   <use href="./images/icons.svg#icon-company-tagline"></use>
                 </svg>
               </a>
             </li>
-            <li class="client">
+            <li class="item">
               <a href="" class="link">
-                <svg class="icon">
+                <svg class="icon" width="43.46" height="41.18">
                   <use href="./images/icons.svg#icon-company"></use>
                 </svg>
               </a>
             </li>
-            <li class="client">
+            <li class="item">
               <a href="" class="link">
-                <svg class="icon">
+                <svg class="icon" width="84.44" height="40.62">
                   <use href="./images/icons.svg#icon-foster-peters"></use>
                 </svg>
               </a>
             </li>
-            <li class="client">
+            <li class="item">
               <a href="" class="link">
-                <svg class="icon">
+                <svg class="icon" width="62.54" height="45.43">
                   <use href="./images/icons.svg#icon-brand"></use>
                 </svg>
               </a>
             </li>
-            <li class="client">
+            <li class="item">
               <a href="" class="link">
-                <svg class="icon">
+                <svg class="icon" width="93.79" height="43.93">
                   <use href="./images/icons.svg#icon-company-tag-line"></use>
                 </svg>
               </a>
