--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <ul class="auth-nav">
           <li class="item">
             <a href="mailto:info@devstudio.com" class="link">
-              <svg class="icon">
+              <svg class="icon" width="16" height="12">
                 <use href="./images/icons.svg#icon-envelope"></use>
               </svg>
               info@devstudio.com
@@ -47,7 +47,7 @@
           </li>
           <li class="item">
             <a href="tel:+380961111111" class="link">
-              <svg class="icon">
+              <svg class="icon" width="10" height="16">
                 <use href="./images/icons.svg#icon-smartphone"></use>
               </svg>
               +38 096 111 11 11
@@ -74,7 +74,7 @@
             <li class="item">
               <div class="thumb">
                 <svg class="icon" width="70" height="70">
-                  <use href="./images/icons.svg#icon-sattellite"></use>
+                  <use href="./images/icons.svg#icon-antenna"></use>
                 </svg>
               </div>
               <h3 class="title">Внимание к деталям</h3>
@@ -173,28 +173,28 @@
               <ul class="staff-social">
                 <li class="item-icon">
                   <a class="link" href="" aria-label="Instagram">
-                    <svg class="icon" width="20px" height="20px">
+                    <svg class="icon">
                       <use href="./images/icons.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="item-icon">
                   <a class="link" href="" aria-label="Twitter">
-                    <svg class="icon" width="20px" height="20px">
+                    <svg class="icon">
                       <use href="./images/icons.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="item-icon">
                   <a class="link" href="" aria-label="Facebook">
-                    <svg class="icon" width="20px" height="20px">
+                    <svg class="icon">
                       <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="item-icon">
                   <a class="link" href="" aria-label="LinkedIn">
-                    <svg class="icon" width="20px" height="20px">
+                    <svg class="icon">
                       <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg>
                   </a>
@@ -213,28 +213,28 @@
               <ul class="staff-social">
                 <li class="item-icon">
                   <a class="link" href="" aria-label="Instagram">
-                    <svg class="icon" width="20px" height="20px">
+                    <svg class="icon">
                       <use href="./images/icons.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="item-icon">
                   <a class="link" href="" aria-label="Twitter">
-                    <svg class="icon" width="20px" height="20px">
+                    <svg class="icon">
                       <use href="./images/icons.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="item-icon">
                   <a class="link" href="" aria-label="Facebook">
-                    <svg class="icon" width="20px" height="20px">
+                    <svg class="icon">
                       <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="item-icon">
                   <a class="link" href="" aria-label="LinkedIn">
-                    <svg class="icon" width="20px" height="20px">
+                    <svg class="icon">
                       <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg>
                   </a>
@@ -253,28 +253,28 @@
               <ul class="staff-social">
                 <li class="item-icon">
                   <a class="link" href="" aria-label="Instagram">
-                    <svg class="icon" width="20px" height="20px">
+                    <svg class="icon">
                       <use href="./images/icons.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="item-icon">
                   <a class="link" href="" aria-label="Twitter">
-                    <svg class="icon" width="20px" height="20px">
+                    <svg class="icon">
                       <use href="./images/icons.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="item-icon">
                   <a class="link" href="" aria-label="Facebook">
-                    <svg class="icon" width="20px" height="20px">
+                    <svg class="icon">
                       <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="item-icon">
                   <a class="link" href="" aria-label="LinkedIn">
-                    <svg class="icon" width="20px" height="20px">
+                    <svg class="icon">
                       <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg>
                   </a>
@@ -293,28 +293,28 @@
               <ul class="staff-social">
                 <li class="item-icon">
                   <a class="link" href="" aria-label="Instagram">
-                    <svg class="icon" width="20px" height="20px">
+                    <svg class="icon">
                       <use href="./images/icons.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="item-icon">
                   <a class="link" href="" aria-label="Twitter">
-                    <svg class="icon" width="20px" height="20px">
+                    <svg class="icon">
                       <use href="./images/icons.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="item-icon">
                   <a class="link" href="" aria-label="Facebook">
-                    <svg class="icon" width="20px" height="20px">
+                    <svg class="icon">
                       <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
                 <li class="item-icon">
                   <a class="link" href="" aria-label="LinkedIn">
-                    <svg class="icon" width="20px" height="20px">
+                    <svg class="icon">
                       <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg>
                   </a>
@@ -332,42 +332,42 @@
           <ul class="clients-list">
             <li class="item">
               <a href="" class="link">
-                <svg class="icon" width="41" height="46.7">
+                <svg class="icon">
                   <use href="./images/icons.svg#icon-yaco"></use>
                 </svg>
               </a>
             </li>
             <li class="item">
               <a href="" class="link">
-                <svg class="icon" width="40" height="52">
+                <svg class="icon">
                   <use href="./images/icons.svg#icon-company-tagline"></use>
                 </svg>
               </a>
             </li>
             <li class="item">
               <a href="" class="link">
-                <svg class="icon" width="43.46" height="41.18">
+                <svg class="icon">
                   <use href="./images/icons.svg#icon-company"></use>
                 </svg>
               </a>
             </li>
             <li class="item">
               <a href="" class="link">
-                <svg class="icon" width="84.44" height="40.62">
+                <svg class="icon">
                   <use href="./images/icons.svg#icon-foster-peters"></use>
                 </svg>
               </a>
             </li>
             <li class="item">
               <a href="" class="link">
-                <svg class="icon" width="62.54" height="45.43">
+                <svg class="icon">
                   <use href="./images/icons.svg#icon-brand"></use>
                 </svg>
               </a>
             </li>
             <li class="item">
               <a href="" class="link">
-                <svg class="icon" width="93.79" height="43.93">
+                <svg class="icon">
                   <use href="./images/icons.svg#icon-company-tag-line"></use>
                 </svg>
               </a>
