--- a/portfolio.html
+++ b/portfolio.html
@@ -39,7 +39,7 @@
         <ul class="auth-nav">
           <li class="item">
             <a href="mailto:info@devstudio.com" class="link">
-              <svg class="icon">
+              <svg class="icon" width="16" height="12">
                 <use href="./images/icons.svg#icon-envelope"></use>
               </svg>
               info@devstudio.com
@@ -47,7 +47,7 @@
           </li>
           <li class="item">
             <a href="tel:+380961111111" class="link">
-              <svg class="icon">
+              <svg class="icon" width="10" height="16">
                 <use href="./images/icons.svg#icon-smartphone"></use>
               </svg>
               +38 096 111 11 11
