--- a/index.html
+++ b/index.html
@@ -168,38 +168,40 @@
                 width="270"
                 height="260"
               />
-              <h3 class="name">Игорь Демьяненко</h3>
-              <p class="position">Product Designer</p>
-              <ul class="staff-social">
-                <li class="item-icon">
-                  <a class="link" href="" aria-label="Instagram">
-                    <svg class="icon">
-                      <use href="./images/icons.svg#icon-instagram"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="item-icon">
-                  <a class="link" href="" aria-label="Twitter">
-                    <svg class="icon">
-                      <use href="./images/icons.svg#icon-twitter"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="item-icon">
-                  <a class="link" href="" aria-label="Facebook">
-                    <svg class="icon">
-                      <use href="./images/icons.svg#icon-facebook"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="item-icon">
-                  <a class="link" href="" aria-label="LinkedIn">
-                    <svg class="icon">
-                      <use href="./images/icons.svg#icon-linkedin"></use>
-                    </svg>
-                  </a>
-                </li>
-              </ul>
+              <div class="item-card">
+                <h3 class="name">Игорь Демьяненко</h3>
+                <p class="position">Product Designer</p>
+                <ul class="staff-social">
+                  <li class="item-icon">
+                    <a class="link" href="" aria-label="Instagram">
+                      <svg class="icon">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="item-icon">
+                    <a class="link" href="" aria-label="Twitter">
+                      <svg class="icon">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="item-icon">
+                    <a class="link" href="" aria-label="Facebook">
+                      <svg class="icon">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="item-icon">
+                    <a class="link" href="" aria-label="LinkedIn">
+                      <svg class="icon">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </li>
             <li class="item">
               <img
@@ -208,38 +210,40 @@
                 width="270"
                 height="260"
               />
-              <h3 class="name">Ольга Репина</h3>
-              <p class="position">Frontend Developer</p>
-              <ul class="staff-social">
-                <li class="item-icon">
-                  <a class="link" href="" aria-label="Instagram">
-                    <svg class="icon">
-                      <use href="./images/icons.svg#icon-instagram"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="item-icon">
-                  <a class="link" href="" aria-label="Twitter">
-                    <svg class="icon">
-                      <use href="./images/icons.svg#icon-twitter"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="item-icon">
-                  <a class="link" href="" aria-label="Facebook">
-                    <svg class="icon">
-                      <use href="./images/icons.svg#icon-facebook"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="item-icon">
-                  <a class="link" href="" aria-label="LinkedIn">
-                    <svg class="icon">
-                      <use href="./images/icons.svg#icon-linkedin"></use>
-                    </svg>
-                  </a>
-                </li>
-              </ul>
+              <div class="item-card">
+                <h3 class="name">Ольга Репина</h3>
+                <p class="position">Frontend Developer</p>
+                <ul class="staff-social">
+                  <li class="item-icon">
+                    <a class="link" href="" aria-label="Instagram">
+                      <svg class="icon">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="item-icon">
+                    <a class="link" href="" aria-label="Twitter">
+                      <svg class="icon">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="item-icon">
+                    <a class="link" href="" aria-label="Facebook">
+                      <svg class="icon">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="item-icon">
+                    <a class="link" href="" aria-label="LinkedIn">
+                      <svg class="icon">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </li>
             <li class="item">
               <img
@@ -248,38 +252,40 @@
                 width="270"
                 height="260"
               />
-              <h3 class="name">Николай Тарасов</h3>
-              <p class="position">Marketing</p>
-              <ul class="staff-social">
-                <li class="item-icon">
-                  <a class="link" href="" aria-label="Instagram">
-                    <svg class="icon">
-                      <use href="./images/icons.svg#icon-instagram"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="item-icon">
-                  <a class="link" href="" aria-label="Twitter">
-                    <svg class="icon">
-                      <use href="./images/icons.svg#icon-twitter"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="item-icon">
-                  <a class="link" href="" aria-label="Facebook">
-                    <svg class="icon">
-                      <use href="./images/icons.svg#icon-facebook"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="item-icon">
-                  <a class="link" href="" aria-label="LinkedIn">
-                    <svg class="icon">
-                      <use href="./images/icons.svg#icon-linkedin"></use>
-                    </svg>
-                  </a>
-                </li>
-              </ul>
+              <div class="item-card">
+                <h3 class="name">Николай Тарасов</h3>
+                <p class="position">Marketing</p>
+                <ul class="staff-social">
+                  <li class="item-icon">
+                    <a class="link" href="" aria-label="Instagram">
+                      <svg class="icon">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="item-icon">
+                    <a class="link" href="" aria-label="Twitter">
+                      <svg class="icon">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="item-icon">
+                    <a class="link" href="" aria-label="Facebook">
+                      <svg class="icon">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="item-icon">
+                    <a class="link" href="" aria-label="LinkedIn">
+                      <svg class="icon">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </li>
             <li class="item">
               <img
@@ -288,38 +294,40 @@
                 width="270"
                 height="260"
               />
-              <h3 class="name">Михаил Ермаков</h3>
-              <p class="position">UI Designer</p>
-              <ul class="staff-social">
-                <li class="item-icon">
-                  <a class="link" href="" aria-label="Instagram">
-                    <svg class="icon">
-                      <use href="./images/icons.svg#icon-instagram"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="item-icon">
-                  <a class="link" href="" aria-label="Twitter">
-                    <svg class="icon">
-                      <use href="./images/icons.svg#icon-twitter"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="item-icon">
-                  <a class="link" href="" aria-label="Facebook">
-                    <svg class="icon">
-                      <use href="./images/icons.svg#icon-facebook"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="item-icon">
-                  <a class="link" href="" aria-label="LinkedIn">
-                    <svg class="icon">
-                      <use href="./images/icons.svg#icon-linkedin"></use>
-                    </svg>
-                  </a>
-                </li>
-              </ul>
+              <div class="item-card">
+                <h3 class="name">Михаил Ермаков</h3>
+                <p class="position">UI Designer</p>
+                <ul class="staff-social">
+                  <li class="item-icon">
+                    <a class="link" href="" aria-label="Instagram">
+                      <svg class="icon">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="item-icon">
+                    <a class="link" href="" aria-label="Twitter">
+                      <svg class="icon">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="item-icon">
+                    <a class="link" href="" aria-label="Facebook">
+                      <svg class="icon">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="item-icon">
+                    <a class="link" href="" aria-label="LinkedIn">
+                      <svg class="icon">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </li>
           </ul>
         </div>
@@ -402,8 +410,8 @@
           </address>
         </div>
 
-        <section class="socials">
-          <h3 class="text">Присоединяйтесь</h3>
+        <div class="socials">
+          <p class="text">Присоединяйтесь</p>
           <ul class="socials-list">
             <li class="item">
               <a href="" class="link">
@@ -434,7 +442,7 @@
               </a>
             </li>
           </ul>
-        </section>
+        </div>
       </div>
     </footer>
   </body>
