--- a/portfolio.html
+++ b/portfolio.html
@@ -82,7 +82,7 @@
 
           <ul class="portfolio-examples">
             <li class="item">
-              <a href="">
+              <a href="" class="link">
                 <img
                   src="./images/technokriak.jpg"
                   alt="Скриншот сайта Технокряк"
@@ -95,7 +95,7 @@
               </a>
             </li>
             <li class="item">
-              <a href="">
+              <a href="" class="link">
                 <img
                   src="./images/poster.jpg"
                   alt="Двое баскетболистов борются за мяч"
@@ -108,7 +108,7 @@
               </a>
             </li>
             <li class="item">
-              <a href="">
+              <a href="" class="link">
                 <img
                   src="./images/seafood.jpg"
                   alt="Логотип ресторана Seafood"
@@ -121,7 +121,7 @@
               </a>
             </li>
             <li class="item">
-              <a href="">
+              <a href="" class="link">
                 <img
                   src="./images/prime.jpg"
                   alt="Черные наушники"
@@ -134,7 +134,7 @@
               </a>
             </li>
             <li class="item">
-              <a href="">
+              <a href="" class="link">
                 <img
                   src="./images/boxes.jpg"
                   alt="Белая и бежевая коробка"
@@ -147,7 +147,7 @@
               </a>
             </li>
             <li class="item">
-              <a href="">
+              <a href="" class="link">
                 <img
                   src="./images/inspiration.jpg"
                   alt="Скриншот сайта Inspiration has no Borders"
@@ -160,7 +160,7 @@
               </a>
             </li>
             <li class="item">
-              <a href="">
+              <a href="" class="link">
                 <img
                   src="./images/limited.jpg"
                   alt="Обложка журнала Limited Edition"
@@ -173,7 +173,7 @@
               </a>
             </li>
             <li class="item">
-              <a href="">
+              <a href="" class="link">
                 <img src="./images/lab.jpg" alt="Бирка LABEL TAG" width="370" />
                 <div class="description">
                   <h2 class="title">Проект LAB</h2>
@@ -182,7 +182,7 @@
               </a>
             </li>
             <li class="item">
-              <a href="">
+              <a href="" class="link">
                 <img
                   src="./images/growing.jpg"
                   alt="Мужчина пользуется приложением Growing Business"
