--- a/portfolio.html
+++ b/portfolio.html
@@ -224,8 +224,8 @@
           </address>
         </div>
 
-        <section class="socials">
-          <h3 class="text">Присоединяйтесь</h3>
+        <div class="socials">
+          <p class="text">Присоединяйтесь</p>
           <ul class="socials-list">
             <li class="item">
               <a href="" class="link">
@@ -256,7 +256,7 @@
               </a>
             </li>
           </ul>
-        </section>
+        </div>
       </div>
     </footer>
   </body>
